tests/ui/type_invalid_struct_literal_root_no_cascade.ql
enum Command {
    Value(Int),
}

fn main() -> Bool {
    return Command.Value { value: 1 };
}
